More solenoids found for LTD's Force & Haunted Hotel
More lamps found for LTD's Space Poker
Increased IRQ for LTD system III, helps with ball detection in outhole
Corrected CPU clock for Peyper / Sonic games, helps speeding up Gamatron game start
Doubled ZC frequency for Joctronic games, saving NVRAM
Support 4-solenoid stepper motor mech used by High Roller Casino, Starship Troopers, and Playboy

*** ROM SUPPORT *** Thanks to Soren, ipdb.org, Silvio Finotti
Clones:
Demolition Man LX-4C (competition MOD) (updated)
Demolition Man H-6C (competition MOD) (updated)
Flintstones, The LX-3
Oba-Oba (old hardware)
Space Train (old hardware)
Theatre of Magic 1.3XC (competition MOD) (updated)
Twilight Zone LA-9 (aka PAPA Tournament Version 9.0)

Correct Dumps:
Time Machine (LTD, 4 players) - confirmed that currently supported ROMs are correct
Twilight Zone P-3, P-4 (using later U14 and U15 sound ROMs, only PA-1 uses SP-1 sound)



Version 3.2 (October 6th, 2019) - "Sounds good II"
------------------------------------------------------------------------------

Initial efforts to start converting the PinMAME source base over to the 3-Clause BSD License (not completed yet, so for the full binary package the old license stays in place for now!)

*** CORE/CPU ***
Improved HC55516 CVSD sound emulation (most Williams/Bally machines in the Gorgar up to Twilight Zone range)
Improved YM2151 sound/timing emulation (mainly WPC pre-DCS machines, maybe improves even other manufacturers like Data East)
Fixed the Nuova Bell sound board. This had various issues, and information is quite sparse
Implement 'fast flips' support for Jack*Bot and Metallica 1.80.0LE
Fix NBA Fastbreak 'fast flips' so that the million dollar shot works
Fix Champion Pub 'fast flips' support
Fixed Barni emulation
Added preliminary E.F.O. hardware support (games will crash after a few seconds due to protection)
Increased main CPU IRQ rate for Bushido, Mach 2, and Jolly Park