@@ -880,12 +880,19 @@ DRIVERNV(centaurj)      //Centaur (1979, alternate set)
 DRIVERNV(topazi)        //Topaz (1979)
 DRIVERNV(skatebrd)      //Skate Board (1980)
 DRIVERNV(brvteam )      //Brave Team (1985)
+DRIVERNV(brvteafp)      //Brave Team (Free Play)
 DRIVERNV(canasta )      //Canasta '86' (1986)
+DRIVERNV(canastfp)      //Canasta '86' (Free Play)
 DRIVERNV(lapbylap)      //Lap By Lap (1986)
+DRIVERNV(lapbylfp)      //Lap By Lap (Free Play)
 DRIVERNV(moonlght)      //Moon Light (1987)
+DRIVERNV(moonlifp)      //Moon Light (Free Play)
 DRIVERNV(pinclown)      //Clown (1988)
+DRIVERNV(pinclofp)      //Clown (Free Play)
 DRIVERNV(corsario)      //Corsario (1989)
+DRIVERNV(corsarfp)      //Corsario (Free Play)
 DRIVERNV(mundial )      //Mundial 90 (1990)
+DRIVERNV(mundiafp)      //Mundial 90 (Free Play)
 DRIVERNV(atleta  )      //Atleta (1991)
 DRIVERNV(ind250cc)      //250 CC (1992)
 DRIVERNV(metalman)      //Metal Man (1992)
