@@ -19,11 +19,18 @@ Corrected CPU clock for Peyper / Sonic games, helps speeding up Gamatron game st
 Doubled ZC frequency for Joctronic games, saving NVRAM
 Support 4-solenoid stepper motor mech used by High Roller Casino, Starship Troopers, and Playboy
 
-*** ROM SUPPORT *** Thanks to Soren, ipdb.org, Silvio Finotti
+*** ROM SUPPORT *** Thanks to Soren, ipdb.org, Silvio Finotti, tecnopinball.org
 Clones:
+Brave Team (Free Play)
+Canasta '86' (Free Play)
+Clown (Inder, Free Play)
+Corsario (Free Play)
 Demolition Man LX-4C (competition MOD) (updated)
 Demolition Man H-6C (competition MOD) (updated)
 Flintstones, The LX-3
+Lap By Lap (Free Play)
+Moon Light (Free Play)
+Mundial 90 (Free Play)
 Oba-Oba (old hardware)
 Space Train (old hardware)
 Theatre of Magic 1.3XC (competition MOD) (updated)
